--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
@@ -26,6 +27,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.3.1"
+    "vite": "^6.0.7"
   }
 }
